# Networkin

./: CMakeLists.txt  Notes.md  README.md  run.sh
inc/: testlib.h
include/: lib.h
include/lib0/: lib.h
src/: lib.c  main.c  testlib.c
src/lib0/: lib.c
